# hyprgrd

./: .gitignore  Cargo.toml  README.md  flake.nix
plugin/: CMakeLists.txt  helpers.hpp  main.cpp  test_plugin.cpp  test_plugin_symbols.cpp
src/: bezier.rs  command.rs  config.rs  grid.rs  lib.rs  main.rs  switcher.rs  traits.rs
src/hyprland/: gestures.rs  mod.rs  wm.rs
src/ipc/: listener.rs  mod.rs
src/visualizer/: gtk.rs  mod.rs
