[package]
name = "hyprgrd"
version = "0.1.0"
edition = "2021"
description = "A grid-based workspace switcher for Hyprland"

[features]
default = ["visualizer-gtk"]
visualizer-gtk = ["dep:gtk4", "dep:gtk4-layer-shell"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
gtk4 = { version = "0.9", optional = true }
gtk4-layer-shell = { version = "0.4", optional = true }

[[bin]]
name = "hyprgrd"
path = "src/main.rs"

[[bin]]
name = "hyprgrd-test-overlay"
path = "src/bin/test_overlay.rs"
required-features = ["visualizer-gtk"]

[dev-dependencies]
